--- a/app/src/main/res/layout-h1024dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h1024dp/activity_dashboard.xml
@@ -158,6 +158,7 @@
                     android:layout_centerInParent="true"
                     android:background="@drawable/game_logo" />
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -194,7 +195,7 @@
                 android:layout_height="72dp"
                 android:src="@drawable/ic_sports_esports_black_48dp"
                 app:tint="@color/white"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
                 />
                 <RelativeLayout
