--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,163 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WelcomeActivity"
-    android:id="@+id/rootview"
-    android:orientation="vertical"
     android:background="@color/basic_color"
-    >
+    tools:context=".WelcomeActivity">
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      android:layout_marginTop="50dp"
+    <ImageView
+        android:id="@+id/loadingImageView"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerInParent="true"
+        android:contentDescription="@string/loading_image"
+        android:src="@drawable/game_logo" />
 
-      android:layout_gravity="center"
+    <!--   <ProgressBar
+           android:layout_width="100dp"
+           android:layout_height="100dp"
+           android:layout_centerInParent="true"
+           android:visibility="visible" />-->
 
-      >
-
-    <RelativeLayout
-
-        android:layout_width="200dp"
-        android:layout_gravity="center"
-        android:layout_height="50dp"
-        android:background="@drawable/ic_hexnow"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:layout_marginBottom="50dp"
-
-        >
-
-
-      <TextView
-          android:id="@+id/more_text"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_centerInParent="true"
-          android:fontFamily="@font/ultra"
-          android:text="Tips"
-          android:textColor="@color/white"
-          android:textSize="20dp"
-          android:textStyle="bold" />
-
-
-    </RelativeLayout>
-
-
-
-    <LinearLayout
-
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="250dp">
-      <androidx.viewpager.widget.ViewPager
+    <!--  <ProgressBar
+          android:id="@+id/progress"
+          style="?android:progressBarStyleHorizontal"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:id="@+id/viewpager"
-          />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:visibility="gone"
+          android:layout_height="30dp"
+          android:layout_alignParentBottom="true"
+          android:layout_centerInParent="true"
+          android:layout_marginHorizontal="30dp"
+          android:layout_marginBottom="100dp"
+          android:progressDrawable="@drawable/custom_drawable_bg" />
+  -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="60dp"
+        android:gravity="center"
+        android:text="Please wait...."
+        android:textColor="@color/white"
+        android:textSize="16sp" />
 
-      <RelativeLayout
-          android:id="@+id/previous"
-          android:layout_width="0dp"
-          android:layout_weight="1"
-          android:layout_height="50dp"
-          android:background="@drawable/ic_hexnow"
-          android:layout_marginLeft="25dp"
-          android:layout_marginRight="25dp"
-          android:layout_marginTop="10dp"
-          android:padding="10dp"
-          android:gravity="center"
-          >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-
-
-            android:text="Previous"/>
-
-      </RelativeLayout>
-
-      <RelativeLayout
-          android:id="@+id/next"
-          android:layout_width="0dp"
-          android:layout_weight="1"
-          android:layout_height="50dp"
-          android:background="@drawable/ic_hexnow"
-          android:layout_marginLeft="25dp"
-          android:layout_marginRight="25dp"
-          android:layout_marginTop="10dp"
-          android:padding="10dp"
-          android:gravity="center"
-          >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-          android:textColor="@color/white"
-
-
-          android:text="Next"/>
-
-      </RelativeLayout>
-
-    </LinearLayout>
-
-
-
-
-
-  </LinearLayout>
-  <ProgressBar
-      android:visibility="gone"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
-      android:layout_alignParentBottom="true"
-      android:layout_centerInParent="true"
-      android:layout_marginBottom="70dp"
-      />
-  <ProgressBar
-      android:layout_alignParentBottom="true"
-      android:layout_width="match_parent"
-      android:layout_height="30dp"
-      android:layout_marginHorizontal="30dp"
-      android:id="@+id/progress"
-      android:progressDrawable="@drawable/custom_drawable_bg"
-      style="?android:progressBarStyleHorizontal"
-      android:layout_centerInParent="true"
-      android:layout_marginBottom="100dp"
-      />
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
-      android:layout_centerInParent="true"
-      android:layout_marginBottom="60dp"
-      android:textColor="@color/white"
-      android:gravity="center"
-      android:text="Loading...."
-      />
-
-
-
-
-
-
-
-
-
-  </RelativeLayout>
+</RelativeLayout>
