--- a/app/src/main/res/layout/activity_exam_game2.xml
+++ b/app/src/main/res/layout/activity_exam_game2.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -100,7 +99,6 @@
 
                 </RelativeLayout>
 
-
             </RelativeLayout>
 
 
@@ -118,7 +116,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="200dp"
                     android:elevation="10dp"
-                    android:orientation="vertical"></LinearLayout>
+                    android:orientation="vertical" />
 
             </LinearLayout>
 
