--- a/app/src/main/res/layout/correct_answer_dialog.xml
+++ b/app/src/main/res/layout/correct_answer_dialog.xml
@@ -36,18 +36,17 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
                     android:gravity="center_vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
                         android:layout_gravity="center"
                         android:layout_marginTop="18dp"
                         android:fontFamily="@font/arizonia"
                         android:gravity="center"
-                        android:text="Correct Answer"
+                        android:text="@string/correct_answer"
                         android:textColor="@color/white"
                         android:textSize="20dp"
                         android:textStyle="bold"
@@ -59,10 +58,9 @@
                     android:id="@+id/close_dialog"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_marginTop="0dp"
-
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <ImageView
@@ -187,7 +185,6 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="@string/readmore"
-
                         android:textColor="@color/white"
                         android:textSize="20dp"
                         android:textStyle="bold" />
