--- a/app/src/main/res/layout-h300dp/languages_dialog.xml
+++ b/app/src/main/res/layout-h300dp/languages_dialog.xml
@@ -102,7 +102,7 @@
                       android:text="@string/french"
                       android:textColor="@color/white"
                       android:textSize="18sp"
-                      android:layout_marginLeft="10dp"
+                      android:layout_marginStart="10dp"
                       android:fontFamily="@font/arimo"
                       android:layout_gravity="center_vertical"/>
               </LinearLayout>
@@ -112,6 +112,48 @@
                   android:layout_height="50dp"
                   android:layout_margin="10dp"
                   android:id="@+id/default_theme"
+                  android:src="@drawable/ic_hexnow"
+                  app:tint="@color/purple_500"
+
+                  />
+          </RelativeLayout>
+
+          <RelativeLayout
+              android:id="@+id/spanish_language"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
+
+              <LinearLayout
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_centerInParent="true"
+                  android:elevation="5dp"
+                  android:orientation="horizontal">
+
+                  <ImageView
+                      android:id="@+id/flag_3"
+                      android:layout_width="48dp"
+                      android:layout_height="48dp"
+                      android:src="@drawable/spain" />
+
+
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="center_vertical"
+                      android:layout_marginStart="10dp"
+                      android:fontFamily="@font/arimo"
+                      android:text="@string/spanish"
+                      android:textColor="@color/white"
+                      android:textSize="18sp" />
+              </LinearLayout>
+
+              <ImageView
+                  android:id="@+id/default_theme2"
+                  android:layout_width="match_parent"
+                  android:layout_height="50dp"
+                  android:layout_margin="10dp"
+                  android:orientation="vertical"
                   android:src="@drawable/ic_hexnow"
                   app:tint="@color/purple_500"
 
